# translate-with-bert

./: .gitignore  Cargo.toml  README.md  flake.nix  rs-pkgs-v1.txt
.github/workflows/: ci.yml
patched-crates/ort/: Cargo.toml
patches/: ort-system-override.patch
src/: cleanup.rs  io.rs  lib.rs  main.rs  pipeline.rs  test_gpu.rs
tests/: translation.rs
translator-cli/: Cargo.toml
translator-cli/examples/: hello_fr.txt
translator-cli/src/: main.rs
translator-core/: Cargo.toml
