[package]
name = "bert-trans"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
colored = "3.0.0"
env_logger = "0.11.8"
indicatif = { version = "0.17.11", features = [
    "futures",
    "improved_unicode",
    "tokio",
    "unicode-segmentation",
] }
log = { version = "0.4.27", features = ["serde", "std"] }
ort = { version = "1.16.3", features = [
    "download-binaries",
    "copy-dylibs",
    "fetch-models",
    "cuda",
    "load-dynamic",
] }
rayon = "1.10.0"
regex = { version = "1.11.1", features = ["logging", "pattern", "use_std"] }
rust-bert = { version = "0.23.0", features = ["download-libtorch", "onnx"] }
tch = { version = "0.17.0", features = ["download-libtorch"] }
clap = { version = "4.5.4", features = ["derive"] }


# Default bin
[[bin]]
name = "main"
path = "src/main.rs"


# Extra Binaries

[[bin]]
name = "test_gpu"
path = "src/test_gpu.rs"
