[package]
name = "translator-core"
version = "0.1.0"
edition = "2024"

[features]
default = []
cuda = []
spacy = []
wasm = []

[dependencies]
anyhow = { version = "1.0", features = ["std"] }
tracing = "0.1"
tracing-subscriber = "0.3"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"], optional = true }
